--- a/pages/cashflow/login.html
+++ b/pages/cashflow/login.html
@@ -5,6 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Login Page</title>
     <script src="../../assets/js/tailwindcss-3.4.10.js"></script>
+    <style>
+      #invalid-banner {
+        display: none;
+      }
+    </style>
   </head>
   <body>
     <!-- login.html -->
@@ -14,6 +19,12 @@
         <div class="flex justify-center items-center p-5">
           <form id="loginForm">
             <h1 class="text-center mb-10 font-bold text-4xl">Login</h1>
+            <div
+              id="invalid-banner"
+              class="bg-red-300 pointer-events-none rounded-md py-3 w-full px-4 mb-3 text-black text-center"
+            >
+              Invalid username or password!
+            </div>
             <input
               type="text"
               id="username"
@@ -21,13 +32,22 @@
               placeholder="Username"
               required
             />
-            <input
-              type="text"
-              id="password"
-              class="bg-gray-100 border outline-none rounded-md py-3 w-full px-4 mb-3"
-              placeholder="Password"
-              required
-            />
+            <div class="relative mb-3">
+              <input
+                type="password"
+                id="password"
+                class="bg-gray-100 border outline-none rounded-md py-3 w-full px-4 pr-16"
+                placeholder="Password"
+                required
+              />
+              <button
+                type="button"
+                id="togglePassword"
+                class="absolute right-4 top-1/2 transform -translate-y-1/2 text-gray-500"
+              >
+                Show
+              </button>
+            </div>
             <button
               type="submit"
               class="bg-yellow-400 hover:bg-yellow-500 border outline-none rounded-md py-3 w-full px-4 font-semibold text-white"
@@ -48,6 +68,9 @@
         .addEventListener("submit", async function (event) {
           event.preventDefault();
 
+          const usernameInput = document.getElementById("username");
+          const passwordInput = document.getElementById("password");
+
           const username = document.getElementById("username").value;
           const password = document.getElementById("password").value;
 
@@ -61,6 +84,13 @@
             });
 
             if (!response.ok) {
+              // Display the invalid banner
+              document.getElementById("invalid-banner").style.display = "block";
+
+              // Clear the input fields
+              usernameInput.value = "";
+              passwordInput.value = "";
+
               throw new Error("Login failed");
             }
 
@@ -85,6 +115,27 @@
             console.error("Error:", error);
           }
         });
+
+      document
+        .getElementById("togglePassword")
+        .addEventListener("click", function () {
+          const passwordInput = document.getElementById("password");
+          const toggleButton = document.getElementById("togglePassword");
+
+          // Toggle the type attribute
+          const isPasswordVisible = passwordInput.type === "password";
+          passwordInput.type = isPasswordVisible ? "text" : "password";
+
+          // Update the button text
+          toggleButton.textContent = isPasswordVisible ? "Hide" : "Show";
+        });
+
+      // Hide the invalid banner when the user interacts with the input fields
+      document.querySelectorAll("#username, #password").forEach((input) => {
+        input.addEventListener("input", () => {
+          document.querySelector("#invalid-banner").style.display = "none";
+        });
+      });
     </script>
   </body>
 </html>
