--- a/pages/cashflow/index.html
+++ b/pages/cashflow/index.html
@@ -32,6 +32,7 @@
     <header
       class="bg-white shadow-md p-4 flex justify-between items-center fixed w-full z-30"
     >
+    
     <!-- Mobile Navbar Toggle Button -->
     <button
     id="mobileNavToggle"
@@ -40,16 +41,13 @@
   >
     ☰
   </button>
+  <h1 class="text-3xl font-bold">Dashboard</h1>
   <button
     id="logoutButton"
-    class="text-white bg-red-600 hover:bg-red-700 focus:ring-4 focus:ring-red-300 font-medium rounded-lg text-sm px-5 py-2.5 dark:bg-red-500 dark:hover:bg-red-600 focus:outline-none dark:focus:ring-red-800"
+    class="text-white bg-red-600 hover:bg-red-700 focus:ring-4 focus:ring-red-300 font-medium rounded-lg text-sm px-5 py-2.5 dark:bg-red-500 dark:hover:bg-red-600 focus:outline-none dark:focus:ring-red-800 transform transition-transform duration-300 md:scale-100 scale-75"
   >
     Logout
-  </button>
-
-
-      <h1 class="text-3xl font-bold">Dashboard</h1>
-      
+</button>
     </header>
 
     <!-- Main Content Container -->
@@ -107,7 +105,7 @@
 
       <!-- Body Content (5/6) -->
       <main class="ml-0 md:ml-1/6 w-full p-6 md:w-full">
-        <button id="downloadButton" class="bg-green-500 text-white px-4 py-2 rounded mb-4">
+        <button id="downloadButton" class="bg-green-500 text-white px-4 py-2 rounded mb-4 md:scale-100 scale-75">
           Download
         </button>
         <!-- Content will load here -->
