--- a/pages/cashflow/section/transaction.html
+++ b/pages/cashflow/section/transaction.html
@@ -1,75 +1,89 @@
-<div id="rincian" class="flex-auto bg-white font-mono mx-auto p-4">
+<div id="rincian" class="flex flex-col bg-white font-mono mx-auto p-4 md:p-6">
   <h2 class="text-2xl font-bold mb-4 text-center">KAS RT 49</h2>
-  <div class="flex justify-end m-2">
+
+  <div class="flex justify-end mb-4">
     <button
       id="btnAddTransaction"
-      class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 dark:bg-blue-600 dark:hover:bg-blue-700 focus:outline-none dark:focus:ring-blue-800"
+      class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 dark:bg-blue-600 dark:hover:bg-blue-700 focus:outline-none dark:focus:ring-blue-800 md:scale-100 scale-75"
     >
       Tambah Data
     </button>
   </div>
+
   <table
     class="w-full table-auto border border-collapse border-gray-300 shadow-md mb-4"
   >
     <tr class="bg-gray-200">
-      <th class="py-2 border border-gray-300">SALDO AWAL</th>
-      <td id="initial-balance" class="border border-gray-300 text-center">
+      <th class="py-2 border border-gray-300 text-sm md:text-base">
+        SALDO AWAL
+      </th>
+      <td
+        id="initial-balance"
+        class="border border-gray-300 text-center text-sm md:text-base"
+      >
         Rp 0
       </td>
     </tr>
   </table>
+
   <div class="bg-white shadow-md rounded-lg overflow-x-auto mb-4">
     <table class="min-w-full table-auto bg-white">
       <thead>
         <tr class="bg-gray-100">
           <th
-            class="border py-3 px-4 uppercase font-semibold text-sm text-left"
+            class="border py-3 px-4 uppercase font-semibold text-xs md:text-sm text-left"
           >
             No
           </th>
           <th
-            class="border py-3 px-4 uppercase font-semibold text-sm text-left"
+            class="border py-3 px-4 uppercase font-semibold text-xs md:text-sm text-left"
           >
             Tanggal
           </th>
           <th
-            class="border py-3 px-4 uppercase font-semibold text-sm text-left"
+            class="border py-3 px-4 uppercase font-semibold text-xs md:text-sm text-left"
           >
             Keterangan
           </th>
           <th
-            class="border py-3 px-4 uppercase font-semibold text-sm text-left"
+            class="border py-3 px-4 uppercase font-semibold text-xs md:text-sm text-left"
           >
             Pemasukan
           </th>
           <th
-            class="border py-3 px-4 uppercase font-semibold text-sm text-left"
+            class="border py-3 px-4 uppercase font-semibold text-xs md:text-sm text-left"
           >
             Pengeluaran
           </th>
           <th
-            class="border py-3 px-4 uppercase font-semibold text-sm text-left"
+            class="border py-3 px-4 uppercase font-semibold text-xs md:text-sm text-left"
           >
             Saldo
           </th>
           <th
-            class="border py-3 px-4 uppercase font-semibold text-sm text-left"
+            class="border py-3 px-4 uppercase font-semibold text-xs md:text-sm text-left"
           >
             Action
           </th>
         </tr>
       </thead>
-      <tbody id="transactions-body" class="text-gray-700">
+      <tbody id="transactions-body" class="text-gray-700 text-sm md:text-base">
         <!-- Transactions will be inserted here -->
       </tbody>
     </table>
   </div>
+
   <table
     class="w-full table-auto border border-collapse border-gray-300 shadow-md"
   >
     <tr class="bg-gray-200">
-      <th class="py-2 border border-gray-300">SALDO AKHIR</th>
-      <td id="final-balance" class="border border-gray-300 text-center">
+      <th class="py-2 border border-gray-300 text-sm md:text-base">
+        SALDO AKHIR
+      </th>
+      <td
+        id="final-balance"
+        class="border border-gray-300 text-center text-sm md:text-base"
+      >
         Rp 0
       </td>
     </tr>
