--- a/pages/cashflow/index.html
+++ b/pages/cashflow/index.html
@@ -25,6 +25,10 @@
       #sideNavbar {
         height: 100vh; /* Full height of viewport */
       }
+
+      #downloadButton {
+        z-index: 30; /* Make sure it's higher than the header or other overlays */
+      }
     </style>
   </head>
   <body class="bg-gray-100 font-sans">
