--- a/pages/cashflow/index.html
+++ b/pages/cashflow/index.html
@@ -110,7 +110,7 @@
       <main class="ml-0 md:ml-1/6 w-full p-6 md:w-full">
         <button
           id="downloadButton"
-          class="bg-green-500 text-white px-4 py-2 rounded mb-4 md:scale-75"
+          class="bg-green-500 text-white px-4 py-2 rounded mb-4"
         >
           Download
         </button>
