fix:import module

--- a/pages/cashflow/index.html
+++ b/pages/cashflow/index.html
@@ -152,6 +152,7 @@
       downloadButton.addEventListener("click", downloadTransaction);
       downloadButton.addEventListener("touchstart", downloadTransaction);
     </script>
+    <script type="module" src="../../assets/js/cashflow/handler.js"></script>
     <script type="module" src="../../assets/js/cashflow/main.js"></script>
   </body>
 </html>
